--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^2.2.3"
+scikit-learn = "^1.5.2"
+flask = "^3.0.3"
+nltk = "^3.9.1"
+plotly = "^5.24.1"
+sqlalchemy = "^2.0.36"
 
 
 [build-system]
