--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,10 @@
             "request": "launch",
             "program": "disaster_response_pipeline/core/train_classifier.py",
             "args": [
+                "--database-filepath",
+                "data/DisasterResponse",
+                "--model_filepath",
+                "data/trained_model"
             ],
         },
     ]
