--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,14 @@ ipykernel = "^6.29.5"
 structlog = "^24.4.0"
 typer = "^0.13.0"
 black = {extras = ["jupyter"], version = "^24.10.0"}
+mypy = "^1.13.0"
+flake8 = "^7.1.1"
+isort = "^5.13.2"
+joblib = "^1.4.2"
+flake8-isort = "^6.1.1"
+flake8-black = "^0.3.6"
+flake8-bugbear = "^24.10.31"
+flake8-polyfill = "^1.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,3 +33,16 @@ ipykernel = "^6.29.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+known_standard_library = ["dataclasses", "typing_extensions"]
+force_to_top = ["typing"]
+profile = "black"
+lines_between_sections = 1
+lines_after_imports = 2
+line_length = 110
+force_sort_within_sections = true
+
+[tool.black]
+line-length = 110
+target-version = ["py310"]
